Bug fixes
Fixed a bug where the heart icon on cards would sometimes appear clipped
in Webkit browsers

--- a/main.css
+++ b/main.css
@@ -362,6 +362,9 @@ body {
 	background-repeat: no-repeat;
 	background-position: -1.5px 0;
 }
+body.webkit .card .front .suit {
+	width: 15px;
+}
 .card .front .suit.spades {
 	background-position: -16px -19px;
 }
